--- a/config.tmpl
+++ b/config.tmpl
@@ -511,7 +511,7 @@ chain={{.Network}}
 # 1.2.3.4/255.255.255.0), a network/CIDR (e.g. 1.2.3.4/24), all
 # ipv4 (0.0.0.0/0), or all ipv6 (::/0). This option can be
 # specified multiple times
-#rpcallowip=<ip>
+{{if .RPCAllowIP}}#rpcallowip=<ip>{{.RPCAllowIP}}{{else}}#rpcallowip=<ip>{{end}}
 
 # Username and HMAC-SHA-256 hashed password for JSON-RPC connections. The
 # field <userpw> comes in the format: <USERNAME>:<SALT>$<HASH>. A
@@ -519,7 +519,7 @@ chain={{.Network}}
 # then connects normally using the
 # rpcuser=<USERNAME>/rpcpassword=<PASSWORD> pair of arguments. This
 # option can be specified multiple times
-{{if .RPCAuth}}rpcauth={{.RPCAuth}}{{else}}#rpcauth=<userpw>
+{{if .RPCAuth}}rpcauth={{.RPCAuth}}{{else}}#rpcauth=<userpw>{{end}}
 
 # Bind to given address to listen for JSON-RPC connections. Do not expose
 # the RPC server to untrusted networks such as the public internet!
@@ -527,7 +527,7 @@ chain={{.Network}}
 # optional and overrides -rpcport. Use [host]:port notation for
 # IPv6. This option can be specified multiple times (default:
 # 127.0.0.1 and ::1 i.e., localhost)
-#rpcbind=<addr>[:port]
+{{if .RPCBind}}rpcbind={{.RPCBind}}{{else}}#rpcbind=<addr>[:port]{{end}}
 
 # Location of the auth cookie. Relative paths will be prefixed by a
 # net-specific datadir location. (default: data dir)
@@ -538,7 +538,7 @@ chain={{.Network}}
 #rpccookieperms=<readable-by>
 
 # Password for JSON-RPC connections
-{{if .RPCPassword}}rpcpassword={{.RPCPassword}}{{else}}#rpcpassword=<pw>{{end}}
+#rpcpassword=<pw>
 
 # Listen for JSON-RPC connections on <port> (default: 8332, testnet3:
 # 18332, testnet4: 48332, signet: 38332, regtest: 18443)
